--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -55,10 +55,10 @@
   },
   "branches": {
     "science": "Experimental Sciences",
-    "adab": "Literature",
-    "economics": "Economics",
-    "math": "Mathematics",
-    "scienceTech": "Technical Sciences",
+    "adab": "Arts and humanities",
+    "economics": "Economic and management sciences",
+    "math": "Mathematical sciences",
+    "scienceTech": "Science and technology",
     "traditional": "Traditional Education",
     "appliedArts": "Applied Arts"
   },
@@ -68,7 +68,7 @@
     "agricultural": "Agricultural Sciences",
     "lettres": "Literature",
     "scienceHumain": "Human Sciences",
-    "accounting": "Accounting Management",
+    "accounting": "Accounting management sciences",
     "economicSciences": "Economic Sciences",
     "mathA": "Mathematical Sciences A",
     "mathB": "Mathematical Sciences B",
@@ -86,7 +86,7 @@
     "math": "Mathematics",
     "svt": "Life and Earth Sciences",
     "physicsChemistry": "Physics-Chemistry",
-    "plantAnimal": "Plant and Animal Production",
+    "plantAnimal": "Plant and animal sciences",
     "engineering": "Engineering Sciences",
     "philosophy": "Philosophy",
     "english": "English",
@@ -95,29 +95,29 @@
     "semester1": "Semester 1",
     "semester2": "Semester 2",
     "mis": "Management Information Systems",
-    "accounting": "Accounting",
-    "generalEconomics": "General Economics",
-    "economics": "Economics",
+    "accounting": "Accounting and financial mathematics",
+    "generalEconomics": "General economics and statistics",
+    "economics": "Business econ. & admin. organization",
     "law": "Law",
     "documentation": "Documentation",
-    "linguistics": "Linguistics",
-    "faraid": "Inheritance Studies",
+    "linguistics": "Linguistic Sciences",
+    "faraid": "Faraid and Islamic Timekeeping",
     "literature": "Literature",
-    "interpretation": "Interpretation",
-    "fiqh": "Islamic Jurisprudence",
-    "itGeo": "IT & Geography",
-    "visualArts": "Visual Arts",
-    "productDesign": "Product Design",
-    "multimediaDesign": "Multimedia Design",
-    "envDesign": "Environmental Design"
+    "interpretation": "Tafsir and Hadith",
+    "fiqh": "Fiqh and Usul al-Fiqh",
+    "itGeo": "Computer science and infographics",
+    "visualArts": "Visual arts and art history",
+    "productDesign": "Product Design Art",
+    "multimediaDesign": "Communication and Multimedia Design",
+    "envDesign": "Environmental Design Art"
   },
   "questions": {
     "sport": "Did you take the Physical Education exam?",
     "translation": "Did you take the Translation exam?",
-    "mis": "Did you take the Management Information Systems exam?",
+    "mis": "Did you take Management information systems exam?",
     "law": "Did you take the Law exam?",
-    "itGeo": "Did you take the IT & Geography exam?",
-    "visualArts": "Did you take the Visual Arts exam?"
+    "itGeo": "Did you take the Computer science and infographics exam?",
+    "visualArts": "Did you take the Visual arts and art history exam?"
   },
   "yes": "Yes",
   "no": "No",
@@ -145,8 +145,8 @@
     "math": "Mathematics exam",
     "svt": "Life and Earth Sciences exam",
     "physicsChemistry": "Physics and Chemistry exam",
-    "plantAnimal": "Plant and animal production exam",
-    "engineering": "Engineering sciences exam",
+    "plantAnimal": "Plant and animal sciences exam",
+    "engineering": "Engineering Sciences exam",
     "philosophy": "Philosophy exam",
     "english": "English language exam",
     "sport": "Physical education exam",
@@ -154,31 +154,31 @@
     "semester1": "Continuous assessment from first semester",
     "semester2": "Continuous assessment from second semester",
     "mis": "Management information systems exam",
-    "accounting": "Accounting exam",
-    "generalEconomics": "General economics exam",
-    "economics": "Economics exam",
+    "accounting": "Accounting and financial mathematics exam",
+    "generalEconomics": "General economics and statistics exam",
+    "economics": "Business econ. & admin. organization exam",
     "law": "Law exam",
     "documentation": "Documentation exam",
-    "linguistics": "Linguistics exam",
-    "faraid": "Islamic inheritance studies exam",
+    "linguistics": "Linguistic Sciences exam",
+    "faraid": "Islamic Faraid and Islamic Timekeeping exam",
     "literature": "Literature exam",
-    "interpretation": "Text interpretation exam",
-    "fiqh": "Islamic jurisprudence exam",
+    "interpretation": "Text Tafsir and Hadith exam",
+    "fiqh": "Fiqh and Usul al-Fiqh exam",
     "itGeo": "Information technology and geography exam",
-    "visualArts": "Visual arts exam",
-    "productDesign": "Product design exam",
-    "multimediaDesign": "Multimedia design exam",
-    "envDesign": "Environmental design exam"
+    "visualArts": "Visual arts and art history exam",
+    "productDesign": "Product Design Art exam",
+    "multimediaDesign": "Communication and Multimedia Design exam",
+    "envDesign": "Environmental Design Art exam"
   },
   "alerts": {
     "invalidInputs": "Please enter valid marks (between 0 and 20) for all required subjects",
     "calculationError": "An error occurred during calculation. Please check your inputs.",
     "sportRequired": "Please indicate whether you took the Physical Education exam",
     "translationRequired": "Please indicate whether you took the Translation exam",
-    "misRequired": "Please indicate whether you took the Management Information Systems exam",
+    "misRequired": "Please indicate whether you took Management information systems exam",
     "lawRequired": "Please indicate whether you took the Law exam",
-    "itGeoRequired": "Please indicate whether you took the IT & Geography exam",
-    "visualArtsRequired": "Please indicate whether you took the Visual Arts exam"
+    "itGeoRequired": "Please indicate whether you took the Computer science and infographics exam",
+    "visualArtsRequired": "Please indicate whether you took the Visual arts and art history exam"
   },
   "results": {
     "title": "Baccalaureate Results",
@@ -207,36 +207,36 @@
     "economicsRegional": "Arabic ({{ar}}) * 2 + French ({{fr}}) * 3 + Islamic ({{isl}}) * 2 + History-Geography ({{hg}}) * 2 {{#mis}}+ MIS ({{mis}}) * 1{{/mis}} {{#law}}+ Law ({{law}}) * 1{{/law}} / {{coefSum}} = {{avg}}",
     "mathRegional": "Arabic ({{ar}}) * 2 + French ({{fr}}) * 4 + Islamic ({{isl}}) * 2 + History-Geography ({{hg}}) * 2 {{#trans}}+ Translation ({{trans}}) * 2{{/trans}} {{#sport}}+ Sport ({{sport}}) * 1{{/sport}} / {{coefSum}} = {{avg}}",
     "scienceTechRegional": "Arabic ({{ar}}) * 2 + French ({{fr}}) * 4 + Islamic ({{isl}}) * 2 {{#trans}}+ Translation ({{trans}}) * 2{{/trans}} / {{coefSum}} = {{avg}}",
-    "traditionalRegional": "French ({{fr}}) * 3 + History-Geography ({{hg}}) * {{hgCoef}} + Math ({{math}}) * 1 + Documentation ({{doc}}) * 1 {{#ling}}+ Linguistics ({{ling}}) * 2{{/ling}} {{#faraid}}+ Faraid ({{faraid}}) * 2{{/faraid}} {{#sport}}+ Sport ({{sport}}) * 1{{/sport}} / {{coefSum}} = {{avg}}",
-    "appliedArtsRegional": "Math ({{math}}) * 2 + French ({{fr}}) * 4 + Islamic ({{isl}}) * 2 + Arabic ({{ar}}) * 2 {{#itGeo}}+ IT & Geography ({{itGeo}}) * 2{{/itGeo}} {{#visualArts}}+ Visual Arts ({{visualArts}}) * 2{{/visualArts}} / {{coefSum}} = {{avg}}",
+    "traditionalRegional": "French ({{fr}}) * 3 + History-Geography ({{hg}}) * {{hgCoef}} + Math ({{math}}) * 1 + Documentation ({{doc}}) * 1 {{#ling}}+ Linguistic Sciences ({{ling}}) * 2{{/ling}} {{#faraid}}+ Faraid ({{faraid}}) * 2{{/faraid}} {{#sport}}+ Sport ({{sport}}) * 1{{/sport}} / {{coefSum}} = {{avg}}",
+    "appliedArtsRegional": "Math ({{math}}) * 2 + French ({{fr}}) * 4 + Islamic ({{isl}}) * 2 + Arabic ({{ar}}) * 2 {{#itGeo}}+ Computer science and infographics ({{itGeo}}) * 2{{/itGeo}} {{#visualArts}}+ Visual arts and art history ({{visualArts}}) * 2{{/visualArts}} / {{coefSum}} = {{avg}}",
     "scienceNational": {
       "svt": "Math ({{math}}) * 7 + SVT ({{svt}}) * 7 + Physics-Chemistry ({{pc}}) * 5 + Philosophy ({{philo}}) * 2 + English ({{en}}) * 2 / 23 = {{avg}}",
       "pc": "Math ({{math}}) * 7 + SVT ({{svt}}) * 5 + Physics-Chemistry ({{pc}}) * 7 + Philosophy ({{philo}}) * 2 + English ({{en}}) * 2 / 23 = {{avg}}",
       "agricultural": "Math ({{math}}) * 7 + Physics-Chemistry ({{pc}}) * 5 + SVT ({{svt}}) * 5 + Plant/Animal ({{plantAnimal}}) * 5 + Philosophy ({{philo}}) * 2 + English ({{en}}) * 2 / 26 = {{avg}}"
     },
     "adabNational": "Arabic ({{ar}}) * {{arCoef}} + English ({{en}}) * {{enCoef}} + History-Geography ({{hg}}) * {{hgCoef}} + Philosophy ({{philo}}) * {{philoCoef}} / {{coefSum}} = {{avg}}",
-    "economicsNational": "Math ({{math}}) * 4 + Accounting ({{account}}) * {{accountCoef}} + General Economics ({{genEcon}}) * {{genEconCoef}} + Economics ({{econ}}) * {{econCoef}} + Philosophy ({{philo}}) * 2 + English ({{en}}) * 2 / {{coefSum}} = {{avg}}",
+    "economicsNational": "Math ({{math}}) * 4 + Accounting and financial mathematics ({{account}}) * {{accountCoef}} + General economics and statistics ({{genEcon}}) * {{genEconCoef}} + Business econ. & admin. organization ({{econ}}) * {{econCoef}} + Philosophy ({{philo}}) * 2 + English ({{en}}) * 2 / {{coefSum}} = {{avg}}",
     "mathNational": "Math ({{math}}) * 9 + Physics-Chemistry ({{pc}}) * 7 {{#svt}}+ SVT ({{svt}}) * 3{{/svt}} {{#eng}}+ Engineering ({{eng}}) * 3{{/eng}} + Philosophy ({{philo}}) * 2 + English ({{en}}) * 2 / {{coefSum}} = {{avg}}",
     "scienceTechNational": "Math ({{math}}) * 7 + Physics-Chemistry ({{pc}}) * 5 + Engineering ({{eng}}) * 8 + Philosophy ({{philo}}) * 2 + English ({{en}}) * 2 / {{coefSum}} = {{avg}}",
-    "traditionalArabicNational": "Linguistics ({{ling}}) * 4 + Literature ({{lit}}) * 5 + Interpretation ({{interp}}) * 4 + English ({{en}}) * 2 + Philosophy ({{philo}}) * 2 / 17 = {{avg}}",
-    "traditionalIslamicNational": "Literature ({{lit}}) * 4 + Interpretation ({{interp}}) * 5 + Fiqh ({{fiqh}}) * 5 + English ({{en}}) * 2 + Philosophy ({{philo}}) * 2 / 18 = {{avg}}",
-    "appliedArtsNational": "Product Design ({{product}}) * 5 + Multimedia Design ({{multimedia}}) * 8 + Environmental Design ({{env}}) * 5 + English ({{en}}) * 2 + Philosophy ({{philo}}) * 2 / 22 = {{avg}}",
+    "traditionalArabicNational": "Linguistic Sciences ({{ling}}) * 4 + Literature ({{lit}}) * 5 + Tafsir and Hadith ({{interp}}) * 4 + English ({{en}}) * 2 + Philosophy ({{philo}}) * 2 / 17 = {{avg}}",
+    "traditionalIslamicNational": "Literature ({{lit}}) * 4 + Tafsir and Hadith ({{interp}}) * 5 + Fiqh ({{fiqh}}) * 5 + English ({{en}}) * 2 + Philosophy ({{philo}}) * 2 / 18 = {{avg}}",
+    "appliedArtsNational": "Product Design Art ({{product}}) * 5 + Communication and Multimedia Design ({{multimedia}}) * 8 + Environmental Design Art ({{env}}) * 5 + English ({{en}}) * 2 + Philosophy ({{philo}}) * 2 / 22 = {{avg}}",
     "finalAverage": "Continuous Controls ({{continuous}}) + Regional Exam ({{regional}}) + National Exam ({{national}}) = {{value}}",
-    "independentTraditionalIslamicRegional": "French ({{fr}}) * 3 + History-Geography ({{hg}}) * 2 + Math ({{math}}) * 1 + Documentation ({{doc}}) * 1 + Linguistics ({{ling}}) * 2 + Faraid ({{faraid}}) * 2 {{#sport}}+ Sport ({{sport}}) * 1{{/sport}} / {{coefSum}}",
-    "independentAppliedArtsRegional": "Math ({{math}}) * 2 + French ({{fr}}) * 4 + Islamic ({{isl}}) * 2 + Arabic ({{ar}}) * 2 {{#itGeo}}+ IT & Geography ({{itGeo}}) * 2{{/itGeo}} {{#visualArts}}+ Visual Arts ({{visualArts}}) * 2{{/visualArts}} {{#sport}}+ Sport ({{sport}}) * 1{{/sport}} / {{coefSum}}",
+    "independentTraditionalIslamicRegional": "French ({{fr}}) * 3 + History-Geography ({{hg}}) * 2 + Math ({{math}}) * 1 + Documentation ({{doc}}) * 1 + Linguistic Sciences ({{ling}}) * 2 + Faraid ({{faraid}}) * 2 {{#sport}}+ Sport ({{sport}}) * 1{{/sport}} / {{coefSum}}",
+    "independentAppliedArtsRegional": "Math ({{math}}) * 2 + French ({{fr}}) * 4 + Islamic ({{isl}}) * 2 + Arabic ({{ar}}) * 2 {{#itGeo}}+ Computer science and infographics ({{itGeo}}) * 2{{/itGeo}} {{#visualArts}}+ Visual arts and art history ({{visualArts}}) * 2{{/visualArts}} {{#sport}}+ Sport ({{sport}}) * 1{{/sport}} / {{coefSum}}",
     "independentScienceRegional": "French ({{fr}}) * 4 + History-Geography ({{hg}}) * 2 + Islamic ({{isl}}) * 2 + Arabic ({{ar}}) * 2 {{#sport}}+ Sport ({{sport}}) * 1{{/sport}} {{#trans}}+ Translation ({{trans}}) * 2{{/trans}} / {{coefSum}}",
     "independentAdabRegional": "French ({{fr}}) * 4 + Islamic ({{isl}}) * 2 + Math ({{math}}) * 1 {{#sport}}+ Sport ({{sport}}) * 1{{/sport}} {{#trans}}+ Translation ({{trans}}) * 2{{/trans}} / {{coefSum}}",
     "independentEconomicsRegional": "Arabic ({{ar}}) * 2 + French ({{fr}}) * 3 + Islamic ({{isl}}) * 2 + History-Geography ({{hg}}) * 2 {{#mis}}+ MIS ({{mis}}) * 1{{/mis}} {{#law}}+ Law ({{law}}) * 1{{/law}} {{#sport}}+ Sport ({{sport}}) * 1{{/sport}} / {{coefSum}}",
     "independentMathRegional": "Arabic ({{ar}}) * 2 + French ({{fr}}) * 4 + Islamic ({{isl}}) * 2 + History-Geography ({{hg}}) * 2 {{#trans}}+ Translation ({{trans}}) * 2{{/trans}} {{#sport}}+ Sport ({{sport}}) * 1{{/sport}} / {{coefSum}}",
     "independentScienceTechRegional": "Arabic ({{ar}}) * 2 + French ({{fr}}) * 4 + Islamic ({{isl}}) * 2 {{#trans}}+ Translation ({{trans}}) * 2{{/trans}} {{#sport}}+ Sport ({{sport}}) * 1{{/sport}} / {{coefSum}}",
-    "independentArabicNational": "Linguistics ({{ling}}) * 4 + Literature ({{lit}}) * 5 + Interpretation ({{interp}}) * 4 + English ({{en}}) * 2 + Philosophy ({{philo}}) * 2 / 17",
-    "independentIslamicNational": "Literature ({{lit}}) * 4 + Interpretation ({{interp}}) * 5 + Fiqh ({{fiqh}}) * 5 + English ({{en}}) * 2 + Philosophy ({{philo}}) * 2 / 18",
-    "independentAppliedArtsNational": "Product Design ({{product}}) * 5 + Multimedia Design ({{multimedia}}) * 8 + Environmental Design ({{env}}) * 5 + English ({{en}}) * 2 + Philosophy ({{philo}}) * 2 / 22",
+    "independentArabicNational": "Linguistic Sciences ({{ling}}) * 4 + Literature ({{lit}}) * 5 + Tafsir and Hadith ({{interp}}) * 4 + English ({{en}}) * 2 + Philosophy ({{philo}}) * 2 / 17",
+    "independentIslamicNational": "Literature ({{lit}}) * 4 + Tafsir and Hadith ({{interp}}) * 5 + Fiqh ({{fiqh}}) * 5 + English ({{en}}) * 2 + Philosophy ({{philo}}) * 2 / 18",
+    "independentAppliedArtsNational": "Product Design Art ({{product}}) * 5 + Communication and Multimedia Design ({{multimedia}}) * 8 + Environmental Design Art ({{env}}) * 5 + English ({{en}}) * 2 + Philosophy ({{philo}}) * 2 / 22",
     "independentSVTNational": "Math ({{math}}) * 7 + SVT ({{svt}}) * 7 + Physics-Chemistry ({{pc}}) * 5 + Philosophy ({{philo}}) * 2 + English ({{en}}) * 2 / 23",
     "independentPCNational": "Math ({{math}}) * 7 + SVT ({{svt}}) * 5 + Physics-Chemistry ({{pc}}) * 7 + Philosophy ({{philo}}) * 2 + English ({{en}}) * 2 / 23",
     "independentAgriculturalNational": "Math ({{math}}) * 7 + Physics-Chemistry ({{pc}}) * 5 + SVT ({{svt}}) * 5 + Plant/Animal ({{plantAnimal}}) * 5 + Philosophy ({{philo}}) * 2 + English ({{en}}) * 2 / 26",
     "independentAdabNational": "Arabic ({{ar}}) * {{arCoef}} + English ({{en}}) * {{enCoef}} + History-Geography ({{hg}}) * {{hgCoef}} + Philosophy ({{philo}}) * {{philoCoef}} / {{coefSum}}",
-    "independentEconomicsNational": "Math ({{math}}) * 4 + Accounting ({{account}}) * {{accountCoef}} + General Economics ({{genEcon}}) * {{genEconCoef}} + Economics ({{econ}}) * {{econCoef}} + Philosophy ({{philo}}) * 2 + English ({{en}}) * 2 / {{coefSum}}",
+    "independentEconomicsNational": "Math ({{math}}) * 4 + Accounting and financial mathematics ({{account}}) * {{accountCoef}} + General economics and statistics ({{genEcon}}) * {{genEconCoef}} + Business econ. & admin. organization ({{econ}}) * {{econCoef}} + Philosophy ({{philo}}) * 2 + English ({{en}}) * 2 / {{coefSum}}",
     "independentMathNational": "Math ({{math}}) * 9 + Physics-Chemistry ({{pc}}) * 7 {{#svt}}+ SVT ({{svt}}) * 3{{/svt}} {{#eng}}+ Engineering ({{eng}}) * 3{{/eng}} + Philosophy ({{philo}}) * 2 + English ({{en}}) * 2 / {{coefSum}}",
     "independentScienceTechNational": "Math ({{math}}) * 7 + Physics-Chemistry ({{pc}}) * 5 + Engineering ({{eng}}) * 8 + Philosophy ({{philo}}) * 2 + English ({{en}}) * 2 / {{coefSum}}",
     "independentFinal": "(Regional {{regional}} * 8 + National {{national}} * 14) / 22 = {{value}}"
