--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -56,10 +56,10 @@
   },
   "branches": {
     "science": "Sciences Expérimentales",
-    "adab": "Lettres",
-    "economics": "Économie",
-    "math": "Mathématiques",
-    "scienceTech": "Sciences Techniques",
+    "adab": "Lettres et sciences humaines",
+    "economics": "Sciences économiques et gestion",
+    "math": "Sciences mathématiques",
+    "scienceTech": "Sciences et technologies",
     "traditional": "Enseignement Traditionnel",
     "appliedArts": "Arts Appliqués"
   },
@@ -69,14 +69,14 @@
     "agricultural": "Sciences Agricoles",
     "lettres": "Lettres",
     "scienceHumain": "Sciences Humaines",
-    "accounting": "Gestion Comptable",
+    "accounting": "Sciences de gestion comptable",
     "economicSciences": "Sciences Économiques",
     "mathA": "Sciences Mathématiques A",
     "mathB": "Sciences Mathématiques B",
     "mechanicalTech": "Technique Mécanique",
     "electricalTech": "Technique Électrique",
     "arabicLanguage": "Langue Arabe",
-    "islamicStudies": "Études Islamiques",
+    "islamicStudies": "Sciences islamiques",
     "appliedArts": "Arts Appliqués"
   },
   "subjects": {
@@ -87,38 +87,38 @@
     "math": "Mathématiques",
     "svt": "Sciences de la Vie et de la Terre",
     "physicsChemistry": "Physique-Chimie",
-    "plantAnimal": "Production Végétale et Animale",
-    "engineering": "Sciences de l'Ingénieur",
+    "plantAnimal": "Sciences végétales et animales",
+    "engineering": "Sciences de l’ingénieur",
     "philosophy": "Philosophie",
     "english": "Anglais",
     "sport": "Éducation Physique",
     "translation": "Traduction",
     "semester1": "Semestre 1",
     "semester2": "Semestre 2",
-    "mis": "Systèmes d'Information de Gestion",
-    "accounting": "Comptabilité",
-    "generalEconomics": "Économie Générale",
-    "economics": "Économie",
+    "mis": "Informatique de gestion",
+    "accounting": "Comptabilité et mathématiques financières",
+    "generalEconomics": "Économie générale et statistiques",
+    "economics": "Éco. et orga. admin. des entreprises",
     "law": "Droit",
     "documentation": "Documentation",
-    "linguistics": "Linguistique",
-    "faraid": "Études des Successions",
+    "linguistics": "Sciences du langage",
+    "faraid": "Les successions et les horaires religieux",
     "literature": "Littérature",
-    "interpretation": "Interprétation",
-    "fiqh": "Jurisprudence Islamique",
-    "itGeo": "Informatique & Géographie",
-    "visualArts": "Arts Visuels",
+    "interpretation": "Tafsir et Hadith",
+    "fiqh": "Fiqh et Usul al-Fiqh",
+    "itGeo": "Arts plastiques et histoire de l’art",
+    "visualArts": "Arts plastiques et histoire de l’art",
     "productDesign": "Design de Produit",
-    "multimediaDesign": "Design Multimédia",
+    "multimediaDesign": "Design de communication et multimédia",
     "envDesign": "Design Environnemental"
   },
   "questions": {
     "sport": "Avez-vous passé l'examen d'Éducation Physique ?",
     "translation": "Avez-vous passé l'examen de Traduction ?",
-    "mis": "Avez-vous passé l'examen de Systèmes d'Information de Gestion ?",
+    "mis": "Avez-vous passé l'examen de Informatique de gestion ?",
     "law": "Avez-vous passé l'examen de Droit ?",
-    "itGeo": "Avez-vous passé l'examen d'Informatique & Géographie ?",
-    "visualArts": "Avez-vous passé l'examen d'Arts Visuels ?"
+    "itGeo": "Avez-vous passé l'examen d'Arts plastiques et histoire de l’art ?",
+    "visualArts": "Avez-vous passé l'examen d'Arts plastiques et histoire de l’art ?"
   },
   "yes": "Oui",
   "no": "Non",
@@ -146,29 +146,29 @@
     "math": "Examen de mathématiques",
     "svt": "Examen de sciences de la vie et de la terre",
     "physicsChemistry": "Examen de physique et chimie",
-    "plantAnimal": "Examen de production végétale et animale",
-    "engineering": "Examen de sciences de l'ingénieur",
+    "plantAnimal": "Examen de Sciences végétales et animales",
+    "engineering": "Examen de Sciences de l’ingénieur",
     "philosophy": "Examen de philosophie",
     "english": "Examen d'anglais",
     "sport": "Examen d'éducation physique",
     "translation": "Examen de traduction (français-arabe)",
     "semester1": "Contrôle continu du premier semestre",
     "semester2": "Contrôle continu du deuxième semestre",
-    "mis": "Examen de systèmes d'information de gestion",
-    "accounting": "Examen de comptabilité",
-    "generalEconomics": "Examen d'économie générale",
-    "economics": "Examen d'économie",
+    "mis": "Examen de Informatique de gestion",
+    "accounting": "Examen de Comptabilité et mathématiques financières",
+    "generalEconomics": "Examen d'Économie générale et statistiques",
+    "economics": "Examen d'Éco. et orga. admin. des entreprises",
     "law": "Examen de droit",
     "documentation": "Examen de documentation",
-    "linguistics": "Examen de linguistique",
-    "faraid": "Examen d'études des successions islamiques",
+    "linguistics": "Examen de Sciences du langage",
+    "faraid": "Examen d'Les successions et les horaires religieux islamiques",
     "literature": "Examen de littérature",
-    "interpretation": "Examen d'interprétation de texte",
-    "fiqh": "Examen de jurisprudence islamique",
+    "interpretation": "Examen d'Tafsir et Hadith de texte",
+    "fiqh": "Examen de Fiqh et Usul al-Fiqh",
     "itGeo": "Examen d'informatique et géographie",
-    "visualArts": "Examen d'arts visuels",
+    "visualArts": "Examen d'Arts plastiques et histoire de l’art",
     "productDesign": "Examen de design de produit",
-    "multimediaDesign": "Examen de design multimédia",
+    "multimediaDesign": "Examen de Design de communication et multimédia",
     "envDesign": "Examen de design environnemental"
   },
   "alerts": {
@@ -176,10 +176,10 @@
     "calculationError": "Une erreur s'est produite lors du calcul. Veuillez vérifier vos saisies.",
     "sportRequired": "Veuillez indiquer si vous avez passé l'examen d'Éducation Physique",
     "translationRequired": "Veuillez indiquer si vous avez passé l'examen de Traduction",
-    "misRequired": "Veuillez indiquer si vous avez passé l'examen de Systèmes d'Information de Gestion",
+    "misRequired": "Veuillez indiquer si vous avez passé l'examen de Informatique de gestion",
     "lawRequired": "Veuillez indiquer si vous avez passé l'examen de Droit",
-    "itGeoRequired": "Veuillez indiquer si vous avez passé l'examen d'Informatique & Géographie",
-    "visualArtsRequired": "Veuillez indiquer si vous avez passé l'examen d'Arts Visuels"
+    "itGeoRequired": "Veuillez indiquer si vous avez passé l'examen d'Arts plastiques et histoire de l’art",
+    "visualArtsRequired": "Veuillez indiquer si vous avez passé l'examen d'Arts plastiques et histoire de l’art"
   },
   "results": {
     "title": "Résultats du Baccalauréat",
@@ -208,38 +208,38 @@
     "economicsRegional": "Arabe ({{ar}}) * 2 + Français ({{fr}}) * 3 + Islamique ({{isl}}) * 2 + Histoire-Géo ({{hg}}) * 2 {{#mis}}+ SIG ({{mis}}) * 1{{/mis}} {{#law}}+ Droit ({{law}}) * 1{{/law}} / {{coefSum}} = {{avg}}",
     "mathRegional": "Arabe ({{ar}}) * 2 + Français ({{fr}}) * 4 + Islamique ({{isl}}) * 2 + Histoire-Géo ({{hg}}) * 2 {{#trans}}+ Traduction ({{trans}}) * 2{{/trans}} {{#sport}}+ Sport ({{sport}}) * 1{{/sport}} / {{coefSum}} = {{avg}}",
     "scienceTechRegional": "Arabe ({{ar}}) * 2 + Français ({{fr}}) * 4 + Islamique ({{isl}}) * 2 {{#trans}}+ Traduction ({{trans}}) * 2{{/trans}} / {{coefSum}} = {{avg}}",
-    "traditionalRegional": "Français ({{fr}}) * 3 + Histoire-Géo ({{hg}}) * {{hgCoef}} + Math ({{math}}) * 1 + Documentation ({{doc}}) * 1 {{#ling}}+ Linguistique ({{ling}}) * 2{{/ling}} {{#faraid}}+ Faraid ({{faraid}}) * 2{{/faraid}} {{#sport}}+ Sport ({{sport}}) * 1{{/sport}} / {{coefSum}} = {{avg}}",
-    "appliedArtsRegional": "Math ({{math}}) * 2 + Français ({{fr}}) * 4 + Islamique ({{isl}}) * 2 + Arabe ({{ar}}) * 2 {{#itGeo}}+ Info & Géo ({{itGeo}}) * 2{{/itGeo}} {{#visualArts}}+ Arts Visuels ({{visualArts}}) * 2{{/visualArts}} / {{coefSum}} = {{avg}}",
+    "traditionalRegional": "Français ({{fr}}) * 3 + Histoire-Géo ({{hg}}) * {{hgCoef}} + Math ({{math}}) * 1 + Documentation ({{doc}}) * 1 {{#ling}}+ Sciences du langage ({{ling}}) * 2{{/ling}} {{#faraid}}+ Faraid ({{faraid}}) * 2{{/faraid}} {{#sport}}+ Sport ({{sport}}) * 1{{/sport}} / {{coefSum}} = {{avg}}",
+    "appliedArtsRegional": "Math ({{math}}) * 2 + Français ({{fr}}) * 4 + Islamique ({{isl}}) * 2 + Arabe ({{ar}}) * 2 {{#itGeo}}+ Info & Géo ({{itGeo}}) * 2{{/itGeo}} {{#visualArts}}+ Arts plastiques et histoire de l’art ({{visualArts}}) * 2{{/visualArts}} / {{coefSum}} = {{avg}}",
     "scienceNational": {
       "svt": "Math ({{math}}) * 7 + SVT ({{svt}}) * 7 + Physique-Chimie ({{pc}}) * 5 + Philosophie ({{philo}}) * 2 + Anglais ({{en}}) * 2 / 23 = {{avg}}",
       "pc": "Math ({{math}}) * 7 + SVT ({{svt}}) * 5 + Physique-Chimie ({{pc}}) * 7 + Philosophie ({{philo}}) * 2 + Anglais ({{en}}) * 2 / 23 = {{avg}}",
       "agricultural": "Math ({{math}}) * 7 + Physique-Chimie ({{pc}}) * 5 + SVT ({{svt}}) * 5 + Production Végétale/Animale ({{plantAnimal}}) * 5 + Philosophie ({{philo}}) * 2 + Anglais ({{en}}) * 2 / 26 = {{avg}}"
     },
     "adabNational": "Arabe ({{ar}}) * {{arCoef}} + Anglais ({{en}}) * {{enCoef}} + Histoire-Géo ({{hg}}) * {{hgCoef}} + Philosophie ({{philo}}) * {{philoCoef}} / {{coefSum}} = {{avg}}",
-    "economicsNational": "Math ({{math}}) * 4 + Comptabilité ({{account}}) * {{accountCoef}} + Économie Générale ({{genEcon}}) * {{genEconCoef}} + Économie ({{econ}}) * {{econCoef}} + Philosophie ({{philo}}) * 2 + Anglais ({{en}}) * 2 / {{coefSum}} = {{avg}}",
-    "mathNational": "Math ({{math}}) * 9 + Physique-Chimie ({{pc}}) * 7 {{#svt}}+ SVT ({{svt}}) * 3{{/svt}} {{#eng}}+ Sciences de l'Ingénieur ({{eng}}) * 3{{/eng}} + Philosophie ({{philo}}) * 2 + Anglais ({{en}}) * 2 / {{coefSum}} = {{avg}}",
-    "scienceTechNational": "Math ({{math}}) * 7 + Physique-Chimie ({{pc}}) * 5 + Sciences de l'Ingénieur ({{eng}}) * 8 + Philosophie ({{philo}}) * 2 + Anglais ({{en}}) * 2 / {{coefSum}} = {{avg}}",
-    "traditionalArabicNational": "Linguistique ({{ling}}) * 4 + Littérature ({{lit}}) * 5 + Interprétation ({{interp}}) * 4 + Anglais ({{en}}) * 2 + Philosophie ({{philo}}) * 2 / 17 = {{avg}}",
-    "traditionalIslamicNational": "Littérature ({{lit}}) * 4 + Interprétation ({{interp}}) * 5 + Fiqh ({{fiqh}}) * 5 + Anglais ({{en}}) * 2 + Philosophie ({{philo}}) * 2 / 18 = {{avg}}",
-    "appliedArtsNational": "Design de Produit ({{product}}) * 5 + Design Multimédia ({{multimedia}}) * 8 + Design Environnemental ({{env}}) * 5 + Anglais ({{en}}) * 2 + Philosophie ({{philo}}) * 2 / 22 = {{avg}}",
+    "economicsNational": "Math ({{math}}) * 4 + Comptabilité et mathématiques financières ({{account}}) * {{accountCoef}} + Économie générale et statistiques ({{genEcon}}) * {{genEconCoef}} + Éco. et orga. admin. des entreprises ({{econ}}) * {{econCoef}} + Philosophie ({{philo}}) * 2 + Anglais ({{en}}) * 2 / {{coefSum}} = {{avg}}",
+    "mathNational": "Math ({{math}}) * 9 + Physique-Chimie ({{pc}}) * 7 {{#svt}}+ SVT ({{svt}}) * 3{{/svt}} {{#eng}}+ Sciences de l’ingénieur ({{eng}}) * 3{{/eng}} + Philosophie ({{philo}}) * 2 + Anglais ({{en}}) * 2 / {{coefSum}} = {{avg}}",
+    "scienceTechNational": "Math ({{math}}) * 7 + Physique-Chimie ({{pc}}) * 5 + Sciences de l’ingénieur ({{eng}}) * 8 + Philosophie ({{philo}}) * 2 + Anglais ({{en}}) * 2 / {{coefSum}} = {{avg}}",
+    "traditionalArabicNational": "Sciences du langage ({{ling}}) * 4 + Littérature ({{lit}}) * 5 + Tafsir et Hadith ({{interp}}) * 4 + Anglais ({{en}}) * 2 + Philosophie ({{philo}}) * 2 / 17 = {{avg}}",
+    "traditionalIslamicNational": "Littérature ({{lit}}) * 4 + Tafsir et Hadith ({{interp}}) * 5 + Fiqh ({{fiqh}}) * 5 + Anglais ({{en}}) * 2 + Philosophie ({{philo}}) * 2 / 18 = {{avg}}",
+    "appliedArtsNational": "Design de Produit ({{product}}) * 5 + Design de communication et multimédia ({{multimedia}}) * 8 + Design Environnemental ({{env}}) * 5 + Anglais ({{en}}) * 2 + Philosophie ({{philo}}) * 2 / 22 = {{avg}}",
     "finalAverage": "Contrôle Continu ({{continuous}}) + Examen Régional ({{regional}}) + Examen National ({{national}}) = {{value}}",
-    "independentTraditionalIslamicRegional": "Français ({{fr}}) * 3 + Histoire-Géo ({{hg}}) * 2 + Math ({{math}}) * 1 + Documentation ({{doc}}) * 1 + Linguistique ({{ling}}) * 2 + Faraid ({{faraid}}) * 2 {{#sport}}+ Sport ({{sport}}) * 1{{/sport}} / {{coefSum}}",
-    "independentAppliedArtsRegional": "Math ({{math}}) * 2 + Français ({{fr}}) * 4 + Islamique ({{isl}}) * 2 + Arabe ({{ar}}) * 2 {{#itGeo}}+ Info & Géo ({{itGeo}}) * 2{{/itGeo}} {{#visualArts}}+ Arts Visuels ({{visualArts}}) * 2{{/visualArts}} {{#sport}}+ Sport ({{sport}}) * 1{{/sport}} / {{coefSum}}",
+    "independentTraditionalIslamicRegional": "Français ({{fr}}) * 3 + Histoire-Géo ({{hg}}) * 2 + Math ({{math}}) * 1 + Documentation ({{doc}}) * 1 + Sciences du langage ({{ling}}) * 2 + Faraid ({{faraid}}) * 2 {{#sport}}+ Sport ({{sport}}) * 1{{/sport}} / {{coefSum}}",
+    "independentAppliedArtsRegional": "Math ({{math}}) * 2 + Français ({{fr}}) * 4 + Islamique ({{isl}}) * 2 + Arabe ({{ar}}) * 2 {{#itGeo}}+ Info & Géo ({{itGeo}}) * 2{{/itGeo}} {{#visualArts}}+ Arts plastiques et histoire de l’art ({{visualArts}}) * 2{{/visualArts}} {{#sport}}+ Sport ({{sport}}) * 1{{/sport}} / {{coefSum}}",
     "independentScienceRegional": "Français ({{fr}}) * 4 + Histoire-Géo ({{hg}}) * 2 + Islamique ({{isl}}) * 2 + Arabe ({{ar}}) * 2 {{#sport}}+ Sport ({{sport}}) * 1{{/sport}} {{#trans}}+ Traduction ({{trans}}) * 2{{/trans}} / {{coefSum}}",
     "independentAdabRegional": "Français ({{fr}}) * 4 + Islamique ({{isl}}) * 2 + Math ({{math}}) * 1 {{#sport}}+ Sport ({{sport}}) * 1{{/sport}} {{#trans}}+ Traduction ({{trans}}) * 2{{/trans}} / {{coefSum}}",
     "independentEconomicsRegional": "Arabe ({{ar}}) * 2 + Français ({{fr}}) * 3 + Islamique ({{isl}}) * 2 + Histoire-Géo ({{hg}}) * 2 {{#mis}}+ SIG ({{mis}}) * 1{{/mis}} {{#law}}+ Droit ({{law}}) * 1{{/law}} {{#sport}}+ Sport ({{sport}}) * 1{{/sport}} / {{coefSum}}",
     "independentMathRegional": "Arabe ({{ar}}) * 2 + Français ({{fr}}) * 4 + Islamique ({{isl}}) * 2 + Histoire-Géo ({{hg}}) * 2 {{#trans}}+ Traduction ({{trans}}) * 2{{/trans}} {{#sport}}+ Sport ({{sport}}) * 1{{/sport}} / {{coefSum}}",
     "independentScienceTechRegional": "Arabe ({{ar}}) * 2 + Français ({{fr}}) * 4 + Islamique ({{isl}}) * 2 {{#trans}}+ Traduction ({{trans}}) * 2{{/trans}} {{#sport}}+ Sport ({{sport}}) * 1{{/sport}} / {{coefSum}}",
-    "independentArabicNational": "Linguistique ({{ling}}) * 4 + Littérature ({{lit}}) * 5 + Interprétation ({{interp}}) * 4 + Anglais ({{en}}) * 2 + Philosophie ({{philo}}) * 2 / 17",
-    "independentIslamicNational": "Littérature ({{lit}}) * 4 + Interprétation ({{interp}}) * 5 + Fiqh ({{fiqh}}) * 5 + Anglais ({{en}}) * 2 + Philosophie ({{philo}}) * 2 / 18",
-    "independentAppliedArtsNational": "Design de Produit ({{product}}) * 5 + Design Multimédia ({{multimedia}}) * 8 + Design Environnemental ({{env}}) * 5 + Anglais ({{en}}) * 2 + Philosophie ({{philo}}) * 2 / 22",
+    "independentArabicNational": "Sciences du langage ({{ling}}) * 4 + Littérature ({{lit}}) * 5 + Tafsir et Hadith ({{interp}}) * 4 + Anglais ({{en}}) * 2 + Philosophie ({{philo}}) * 2 / 17",
+    "independentIslamicNational": "Littérature ({{lit}}) * 4 + Tafsir et Hadith ({{interp}}) * 5 + Fiqh ({{fiqh}}) * 5 + Anglais ({{en}}) * 2 + Philosophie ({{philo}}) * 2 / 18",
+    "independentAppliedArtsNational": "Design de Produit ({{product}}) * 5 + Design de communication et multimédia ({{multimedia}}) * 8 + Design Environnemental ({{env}}) * 5 + Anglais ({{en}}) * 2 + Philosophie ({{philo}}) * 2 / 22",
     "independentSVTNational": "Math ({{math}}) * 7 + SVT ({{svt}}) * 7 + Physique-Chimie ({{pc}}) * 5 + Philosophie ({{philo}}) * 2 + Anglais ({{en}}) * 2 / 23",
     "independentPCNational": "Math ({{math}}) * 7 + SVT ({{svt}}) * 5 + Physique-Chimie ({{pc}}) * 7 + Philosophie ({{philo}}) * 2 + Anglais ({{en}}) * 2 / 23",
     "independentAgriculturalNational": "Math ({{math}}) * 7 + Physique-Chimie ({{pc}}) * 5 + SVT ({{svt}}) * 5 + Production Végétale/Animale ({{plantAnimal}}) * 5 + Philosophie ({{philo}}) * 2 + Anglais ({{en}}) * 2 / 26",
     "independentAdabNational": "Arabe ({{ar}}) * {{arCoef}} + Anglais ({{en}}) * {{enCoef}} + Histoire-Géo ({{hg}}) * {{hgCoef}} + Philosophie ({{philo}}) * {{philoCoef}} / {{coefSum}}",
-    "independentEconomicsNational": "Math ({{math}}) * 4 + Comptabilité ({{account}}) * {{accountCoef}} + Économie Générale ({{genEcon}}) * {{genEconCoef}} + Économie ({{econ}}) * {{econCoef}} + Philosophie ({{philo}}) * 2 + Anglais ({{en}}) * 2 / {{coefSum}}",
-    "independentMathNational": "Math ({{math}}) * 9 + Physique-Chimie ({{pc}}) * 7 {{#svt}}+ SVT ({{svt}}) * 3{{/svt}} {{#eng}}+ Sciences de l'Ingénieur ({{eng}}) * 3{{/eng}} + Philosophie ({{philo}}) * 2 + Anglais ({{en}}) * 2 / {{coefSum}}",
-    "independentScienceTechNational": "Math ({{math}}) * 7 + Physique-Chimie ({{pc}}) * 5 + Sciences de l'Ingénieur ({{eng}}) * 8 + Philosophie ({{philo}}) * 2 + Anglais ({{en}}) * 2 / {{coefSum}}",
+    "independentEconomicsNational": "Math ({{math}}) * 4 + Comptabilité et mathématiques financières ({{account}}) * {{accountCoef}} + Économie générale et statistiques ({{genEcon}}) * {{genEconCoef}} + Éco. et orga. admin. des entreprises ({{econ}}) * {{econCoef}} + Philosophie ({{philo}}) * 2 + Anglais ({{en}}) * 2 / {{coefSum}}",
+    "independentMathNational": "Math ({{math}}) * 9 + Physique-Chimie ({{pc}}) * 7 {{#svt}}+ SVT ({{svt}}) * 3{{/svt}} {{#eng}}+ Sciences de l’ingénieur ({{eng}}) * 3{{/eng}} + Philosophie ({{philo}}) * 2 + Anglais ({{en}}) * 2 / {{coefSum}}",
+    "independentScienceTechNational": "Math ({{math}}) * 7 + Physique-Chimie ({{pc}}) * 5 + Sciences de l’ingénieur ({{eng}}) * 8 + Philosophie ({{philo}}) * 2 + Anglais ({{en}}) * 2 / {{coefSum}}",
     "independentFinal": "(Régional {{regional}} * 8 + National {{national}} * 14) / 22 = {{value}}"
   },
   "breakdown": {
