--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -67,9 +67,9 @@
     "svt": "علوم الحياة والأرض",
     "pc": "الفيزياء والكيمياء",
     "agricultural": "العلوم الزراعية",
-    "lettres": "الأداب",
+    "lettres": "الآداب",
     "scienceHumain": "العلوم الإنسانية",
-    "accounting": "التدبير المحاسباتي",
+    "accounting": "علوم التدبير المحاسباتي",
     "economicSciences": "العلوم الاقتصادية",
     "mathA": "العلوم الرياضية أ",
     "mathB": "العلوم الرياضية ب",
@@ -87,38 +87,38 @@
     "math": "الرياضيات",
     "svt": "علوم الحياة والأرض",
     "physicsChemistry": "الفيزياء والكيمياء",
-    "plantAnimal": "الإنتاج النباتي والحيواني",
-    "engineering": "علوم الهندسة",
+    "plantAnimal": "العلوم النباتية و الحيوانية",
+    "engineering": "علوم المهندس",
     "philosophy": "الفلسفة",
     "english": "الإنجليزية",
     "sport": "التربية البدنية",
     "translation": "الترجمة",
     "semester1": "الفصل الأول",
     "semester2": "الفصل الثاني",
-    "mis": "نظم المعلومات والتسيير",
-    "accounting": "المحاسبة",
-    "generalEconomics": "الاقتصاد العام",
-    "economics": "الاقتصاد",
+    "mis": "معلوميات التدبير",
+    "accounting": "المحاسبة و الرياضيات المالية",
+    "generalEconomics": "الاقتصاد العام و الإحصاء",
+    "economics": " الاقتصاد والتنظيم الإداري للمقاولات",
     "law": "القانون",
     "documentation": "التوثيق",
-    "linguistics": "اللسانيات",
-    "faraid": "علم الفرائض",
+    "linguistics": "علوم اللغة",
+    "faraid": "الفرائض و التوقيت",
     "literature": "الأدب",
-    "interpretation": "التفسير",
-    "fiqh": "الفقه",
-    "itGeo": "الإعلاميات والجغرافيا",
-    "visualArts": "الفنون التشكيلية",
-    "productDesign": "تصميم المنتوج",
-    "multimediaDesign": "تصميم الوسائط المتعددة",
-    "envDesign": "تصميم البيئة"
+    "interpretation": "التفسير و الحديث",
+    "fiqh": "الفقه و الأصول",
+    "itGeo": "المعلوميات والأنفوغرافيا",
+    "visualArts": "التقافة التشكيلية و تاريخ الفن",
+    "productDesign": "فن تصميم المنتوج",
+    "multimediaDesign": "فن تصميم التواصل و الوسائط المتعددة",
+    "envDesign": "فن تصميم المحيط"
   },
   "questions": {
     "sport": "هل اجتزت امتحان التربية البدنية؟",
     "translation": "هل اجتزت امتحان الترجمة؟",
-    "mis": "هل اجتزت امتحان نظم المعلومات والتسيير؟",
+    "mis": "هل اجتزت امتحان معلوميات التدبير؟",
     "law": "هل اجتزت امتحان القانون؟",
-    "itGeo": "هل اجتزت امتحان الإعلاميات والجغرافيا؟",
-    "visualArts": "هل اجتزت امتحان الفنون التشكيلية؟"
+    "itGeo": "هل اجتزت امتحان المعلوميات والأنفوغرافيا؟",
+    "visualArts": "هل اجتزت امتحان التقافة التشكيلية و تاريخ الفن؟"
   },
   "yes": "نعم",
   "no": "لا",
@@ -146,40 +146,40 @@
     "math": "امتحان الرياضيات",
     "svt": "امتحان علوم الحياة والأرض",
     "physicsChemistry": "امتحان الفيزياء والكيمياء",
-    "plantAnimal": "امتحان الإنتاج النباتي والحيواني",
-    "engineering": "امتحان علوم الهندسة",
+    "plantAnimal": "امتحان العلوم النباتية و الحيوانية",
+    "engineering": "امتحان علوم المهندس",
     "philosophy": "امتحان الفلسفة",
     "english": "امتحان اللغة الإنجليزية",
     "sport": "امتحان التربية البدنية",
     "translation": "امتحان الترجمة (فرنسي-عربي)",
     "semester1": "المراقبة المستمرة من الفصل الأول",
     "semester2": "المراقبة المستمرة من الفصل الثاني",
-    "mis": "امتحان نظم المعلومات والتسيير",
-    "accounting": "امتحان المحاسبة",
-    "generalEconomics": "امتحان الاقتصاد العام",
-    "economics": "امتحان الاقتصاد",
+    "mis": "امتحان معلوميات التدبير",
+    "accounting": "امتحان المحاسبة و الرياضيات المالية",
+    "generalEconomics": "امتحان الاقتصاد العام و الإحصاء",
+    "economics": "امتحان  الاقتصاد والتنظيم الإداري للمقاولات",
     "law": "امتحان القانون",
     "documentation": "امتحان التوثيق",
-    "linguistics": "امتحان اللسانيات",
-    "faraid": "امتحان علم الفرائض",
+    "linguistics": "امتحان علوم اللغة",
+    "faraid": "امتحان الفرائض و التوقيت",
     "literature": "امتحان الأدب",
     "interpretation": "امتحان تفسير النصوص",
-    "fiqh": "امتحان الفقه",
-    "itGeo": "امتحان الإعلاميات والجغرافيا",
-    "visualArts": "امتحان الفنون التشكيلية",
-    "productDesign": "امتحان تصميم المنتوج",
-    "multimediaDesign": "امتحان تصميم الوسائط المتعددة",
-    "envDesign": "امتحان تصميم البيئة"
+    "fiqh": "امتحان الفقه و الأصول",
+    "itGeo": "امتحان المعلوميات والأنفوغرافيا",
+    "visualArts": "امتحان التقافة التشكيلية و تاريخ الفن",
+    "productDesign": "امتحان فن تصميم المنتوج",
+    "multimediaDesign": "امتحان فن تصميم التواصل و الوسائط المتعددة",
+    "envDesign": "امتحان فن تصميم المحيط"
   },
   "alerts": {
     "invalidInputs": "الرجاء إدخال علامات صحيحة (بين 0 و 20) لجميع المواد المطلوبة",
     "calculationError": "حدث خطأ أثناء الحساب. يرجى التحقق من المدخلات.",
     "sportRequired": "الرجاء تحديد ما إذا كنت قد اجتزت امتحان التربية البدنية",
     "translationRequired": "الرجاء تحديد ما إذا كنت قد اجتزت امتحان الترجمة",
-    "misRequired": "الرجاء تحديد ما إذا كنت قد اجتزت امتحان نظم المعلومات والتسيير",
+    "misRequired": "الرجاء تحديد ما إذا كنت قد اجتزت امتحان معلوميات التدبير",
     "lawRequired": "الرجاء تحديد ما إذا كنت قد اجتزت امتحان القانون",
-    "itGeoRequired": "الرجاء تحديد ما إذا كنت قد اجتزت امتحان الإعلاميات والجغرافيا",
-    "visualArtsRequired": "الرجاء تحديد ما إذا كنت قد اجتزت امتحان الفنون التشكيلية"
+    "itGeoRequired": "الرجاء تحديد ما إذا كنت قد اجتزت امتحان المعلوميات والأنفوغرافيا",
+    "visualArtsRequired": "الرجاء تحديد ما إذا كنت قد اجتزت امتحان التقافة التشكيلية و تاريخ الفن"
   },
   "results": {
     "title": "نتائج البكالوريا",
@@ -208,38 +208,38 @@
     "economicsRegional": "العربية ({{ar}}) * 2 + الفرنسية ({{fr}}) * 3 + التربية الإسلامية ({{isl}}) * 2 + التاريخ-الجغرافيا ({{hg}}) * 2 {{#mis}}+ نظم المعلومات ({{mis}}) * 1{{/mis}} {{#law}}+ القانون ({{law}}) * 1{{/law}} / {{coefSum}} = {{avg}}",
     "mathRegional": "العربية ({{ar}}) * 2 + الفرنسية ({{fr}}) * 4 + التربية الإسلامية ({{isl}}) * 2 + التاريخ-الجغرافيا ({{hg}}) * 2 {{#trans}}+ الترجمة ({{trans}}) * 2{{/trans}} {{#sport}}+ التربية البدنية ({{sport}}) * 1{{/sport}} / {{coefSum}} = {{avg}}",
     "scienceTechRegional": "العربية ({{ar}}) * 2 + الفرنسية ({{fr}}) * 4 + التربية الإسلامية ({{isl}}) * 2 {{#trans}}+ الترجمة ({{trans}}) * 2{{/trans}} / {{coefSum}} = {{avg}}",
-    "traditionalRegional": "الفرنسية ({{fr}}) * 3 + التاريخ-الجغرافيا ({{hg}}) * {{hgCoef}} + الرياضيات ({{math}}) * 1 + التوثيق ({{doc}}) * 1 {{#ling}}+ اللسانيات ({{ling}}) * 2{{/ling}} {{#faraid}}+ الفرائض ({{faraid}}) * 2{{/faraid}} {{#sport}}+ التربية البدنية ({{sport}}) * 1{{/sport}} / {{coefSum}} = {{avg}}",
-    "appliedArtsRegional": "الرياضيات ({{math}}) * 2 + الفرنسية ({{fr}}) * 4 + التربية الإسلامية ({{isl}}) * 2 + العربية ({{ar}}) * 2 {{#itGeo}}+ الإعلاميات والجغرافيا ({{itGeo}}) * 2{{/itGeo}} {{#visualArts}}+ الفنون التشكيلية ({{visualArts}}) * 2{{/visualArts}} / {{coefSum}} = {{avg}}",
+    "traditionalRegional": "الفرنسية ({{fr}}) * 3 + التاريخ-الجغرافيا ({{hg}}) * {{hgCoef}} + الرياضيات ({{math}}) * 1 + التوثيق ({{doc}}) * 1 {{#ling}}+ علوم اللغة ({{ling}}) * 2{{/ling}} {{#faraid}}+ الفرائض ({{faraid}}) * 2{{/faraid}} {{#sport}}+ التربية البدنية ({{sport}}) * 1{{/sport}} / {{coefSum}} = {{avg}}",
+    "appliedArtsRegional": "الرياضيات ({{math}}) * 2 + الفرنسية ({{fr}}) * 4 + التربية الإسلامية ({{isl}}) * 2 + العربية ({{ar}}) * 2 {{#itGeo}}+ المعلوميات والأنفوغرافيا ({{itGeo}}) * 2{{/itGeo}} {{#visualArts}}+ التقافة التشكيلية و تاريخ الفن ({{visualArts}}) * 2{{/visualArts}} / {{coefSum}} = {{avg}}",
     "scienceNational": {
       "svt": "الرياضيات ({{math}}) * 7 + علوم الحياة والأرض ({{svt}}) * 7 + الفيزياء-الكيمياء ({{pc}}) * 5 + الفلسفة ({{philo}}) * 2 + الإنجليزية ({{en}}) * 2 / 23 = {{avg}}",
       "pc": "الرياضيات ({{math}}) * 7 + علوم الحياة والأرض ({{svt}}) * 5 + الفيزياء-الكيمياء ({{pc}}) * 7 + الفلسفة ({{philo}}) * 2 + الإنجليزية ({{en}}) * 2 / 23 = {{avg}}",
       "agricultural": "الرياضيات ({{math}}) * 7 + الفيزياء-الكيمياء ({{pc}}) * 5 + علوم الحياة والأرض ({{svt}}) * 5 + الإنتاج النباتي/الحيواني ({{plantAnimal}}) * 5 + الفلسفة ({{philo}}) * 2 + الإنجليزية ({{en}}) * 2 / 26 = {{avg}}"
     },
     "adabNational": "العربية ({{ar}}) * {{arCoef}} + الإنجليزية ({{en}}) * {{enCoef}} + التاريخ-الجغرافيا ({{hg}}) * {{hgCoef}} + الفلسفة ({{philo}}) * {{philoCoef}} / {{coefSum}} = {{avg}}",
-    "economicsNational": "الرياضيات ({{math}}) * 4 + المحاسبة ({{account}}) * {{accountCoef}} + الاقتصاد العام ({{genEcon}}) * {{genEconCoef}} + الاقتصاد ({{econ}}) * {{econCoef}} + الفلسفة ({{philo}}) * 2 + الإنجليزية ({{en}}) * 2 / {{coefSum}} = {{avg}}",
-    "mathNational": "الرياضيات ({{math}}) * 9 + الفيزياء-الكيمياء ({{pc}}) * 7 {{#svt}}+ علوم الحياة والأرض ({{svt}}) * 3{{/svt}} {{#eng}}+ علوم الهندسة ({{eng}}) * 3{{/eng}} + الفلسفة ({{philo}}) * 2 + الإنجليزية ({{en}}) * 2 / {{coefSum}} = {{avg}}",
-    "scienceTechNational": "الرياضيات ({{math}}) * 7 + الفيزياء-الكيمياء ({{pc}}) * 5 + علوم الهندسة ({{eng}}) * 8 + الفلسفة ({{philo}}) * 2 + الإنجليزية ({{en}}) * 2 / {{coefSum}} = {{avg}}",
-    "traditionalArabicNational": "اللسانيات ({{ling}}) * 4 + الأدب ({{lit}}) * 5 + التفسير ({{interp}}) * 4 + الإنجليزية ({{en}}) * 2 + الفلسفة ({{philo}}) * 2 / 17 = {{avg}}",
-    "traditionalIslamicNational": "الأدب ({{lit}}) * 4 + التفسير ({{interp}}) * 5 + الفقه ({{fiqh}}) * 5 + الإنجليزية ({{en}}) * 2 + الفلسفة ({{philo}}) * 2 / 18 = {{avg}}",
-    "appliedArtsNational": "تصميم المنتوج ({{product}}) * 5 + تصميم الوسائط ({{multimedia}}) * 8 + تصميم البيئة ({{env}}) * 5 + الإنجليزية ({{en}}) * 2 + الفلسفة ({{philo}}) * 2 / 22 = {{avg}}",
+    "economicsNational": "الرياضيات ({{math}}) * 4 + المحاسبة و الرياضيات المالية ({{account}}) * {{accountCoef}} + الاقتصاد العام و الإحصاء ({{genEcon}}) * {{genEconCoef}} +  الاقتصاد والتنظيم الإداري للمقاولات ({{econ}}) * {{econCoef}} + الفلسفة ({{philo}}) * 2 + الإنجليزية ({{en}}) * 2 / {{coefSum}} = {{avg}}",
+    "mathNational": "الرياضيات ({{math}}) * 9 + الفيزياء-الكيمياء ({{pc}}) * 7 {{#svt}}+ علوم الحياة والأرض ({{svt}}) * 3{{/svt}} {{#eng}}+ علوم المهندس ({{eng}}) * 3{{/eng}} + الفلسفة ({{philo}}) * 2 + الإنجليزية ({{en}}) * 2 / {{coefSum}} = {{avg}}",
+    "scienceTechNational": "الرياضيات ({{math}}) * 7 + الفيزياء-الكيمياء ({{pc}}) * 5 + علوم المهندس ({{eng}}) * 8 + الفلسفة ({{philo}}) * 2 + الإنجليزية ({{en}}) * 2 / {{coefSum}} = {{avg}}",
+    "traditionalArabicNational": "علوم اللغة ({{ling}}) * 4 + الأدب ({{lit}}) * 5 + التفسير و الحديث ({{interp}}) * 4 + الإنجليزية ({{en}}) * 2 + الفلسفة ({{philo}}) * 2 / 17 = {{avg}}",
+    "traditionalIslamicNational": "الأدب ({{lit}}) * 4 + التفسير و الحديث ({{interp}}) * 5 + الفقه و الأصول ({{fiqh}}) * 5 + الإنجليزية ({{en}}) * 2 + الفلسفة ({{philo}}) * 2 / 18 = {{avg}}",
+    "appliedArtsNational": "فن تصميم المنتوج ({{product}}) * 5 + تصميم الوسائط ({{multimedia}}) * 8 + فن تصميم المحيط ({{env}}) * 5 + الإنجليزية ({{en}}) * 2 + الفلسفة ({{philo}}) * 2 / 22 = {{avg}}",
     "finalAverage": "المراقبة المستمرة ({{continuous}}) + الامتحان الجهوي ({{regional}}) + الامتحان الوطني ({{national}}) = {{value}}",
-    "independentTraditionalIslamicRegional": "الفرنسية ({{fr}}) * 3 + التاريخ-الجغرافيا ({{hg}}) * 2 + الرياضيات ({{math}}) * 1 + التوثيق ({{doc}}) * 1 + اللسانيات ({{ling}}) * 2 + الفرائض ({{faraid}}) * 2 {{#sport}}+ التربية البدنية ({{sport}}) * 1{{/sport}} / {{coefSum}}",
-    "independentAppliedArtsRegional": "الرياضيات ({{math}}) * 2 + الفرنسية ({{fr}}) * 4 + التربية الإسلامية ({{isl}}) * 2 + العربية ({{ar}}) * 2 {{#itGeo}}+ الإعلاميات والجغرافيا ({{itGeo}}) * 2{{/itGeo}} {{#visualArts}}+ الفنون التشكيلية ({{visualArts}}) * 2{{/visualArts}} {{#sport}}+ التربية البدنية ({{sport}}) * 1{{/sport}} / {{coefSum}}",
+    "independentTraditionalIslamicRegional": "الفرنسية ({{fr}}) * 3 + التاريخ-الجغرافيا ({{hg}}) * 2 + الرياضيات ({{math}}) * 1 + التوثيق ({{doc}}) * 1 + علوم اللغة ({{ling}}) * 2 + الفرائض ({{faraid}}) * 2 {{#sport}}+ التربية البدنية ({{sport}}) * 1{{/sport}} / {{coefSum}}",
+    "independentAppliedArtsRegional": "الرياضيات ({{math}}) * 2 + الفرنسية ({{fr}}) * 4 + التربية الإسلامية ({{isl}}) * 2 + العربية ({{ar}}) * 2 {{#itGeo}}+ المعلوميات والأنفوغرافيا ({{itGeo}}) * 2{{/itGeo}} {{#visualArts}}+ التقافة التشكيلية و تاريخ الفن ({{visualArts}}) * 2{{/visualArts}} {{#sport}}+ التربية البدنية ({{sport}}) * 1{{/sport}} / {{coefSum}}",
     "independentScienceRegional": "الفرنسية ({{fr}}) * 4 + التاريخ-الجغرافيا ({{hg}}) * 2 + التربية الإسلامية ({{isl}}) * 2 + العربية ({{ar}}) * 2 {{#sport}}+ التربية البدنية ({{sport}}) * 1{{/sport}} {{#trans}}+ الترجمة ({{trans}}) * 2{{/trans}} / {{coefSum}}",
     "independentAdabRegional": "الفرنسية ({{fr}}) * 4 + التربية الإسلامية ({{isl}}) * 2 + الرياضيات ({{math}}) * 1 {{#sport}}+ التربية البدنية ({{sport}}) * 1{{/sport}} {{#trans}}+ الترجمة ({{trans}}) * 2{{/trans}} / {{coefSum}}",
     "independentEconomicsRegional": "العربية ({{ar}}) * 2 + الفرنسية ({{fr}}) * 3 + التربية الإسلامية ({{isl}}) * 2 + التاريخ-الجغرافيا ({{hg}}) * 2 {{#mis}}+ نظم المعلومات ({{mis}}) * 1{{/mis}} {{#law}}+ القانون ({{law}}) * 1{{/law}} {{#sport}}+ التربية البدنية ({{sport}}) * 1{{/sport}} / {{coefSum}}",
     "independentMathRegional": "العربية ({{ar}}) * 2 + الفرنسية ({{fr}}) * 4 + التربية الإسلامية ({{isl}}) * 2 + التاريخ-الجغرافيا ({{hg}}) * 2 {{#trans}}+ الترجمة ({{trans}}) * 2{{/trans}} {{#sport}}+ التربية البدنية ({{sport}}) * 1{{/sport}} / {{coefSum}}",
     "independentScienceTechRegional": "العربية ({{ar}}) * 2 + الفرنسية ({{fr}}) * 4 + التربية الإسلامية ({{isl}}) * 2 {{#trans}}+ الترجمة ({{trans}}) * 2{{/trans}} {{#sport}}+ التربية البدنية ({{sport}}) * 1{{/sport}} / {{coefSum}}",
-    "independentArabicNational": "اللسانيات ({{ling}}) * 4 + الأدب ({{lit}}) * 5 + التفسير ({{interp}}) * 4 + الإنجليزية ({{en}}) * 2 + الفلسفة ({{philo}}) * 2 / 17",
-    "independentIslamicNational": "الأدب ({{lit}}) * 4 + التفسير ({{interp}}) * 5 + الفقه ({{fiqh}}) * 5 + الإنجليزية ({{en}}) * 2 + الفلسفة ({{philo}}) * 2 / 18",
-    "independentAppliedArtsNational": "تصميم المنتوج ({{product}}) * 5 + تصميم الوسائط ({{multimedia}}) * 8 + تصميم البيئة ({{env}}) * 5 + الإنجليزية ({{en}}) * 2 + الفلسفة ({{philo}}) * 2 / 22",
+    "independentArabicNational": "علوم اللغة ({{ling}}) * 4 + الأدب ({{lit}}) * 5 + التفسير و الحديث ({{interp}}) * 4 + الإنجليزية ({{en}}) * 2 + الفلسفة ({{philo}}) * 2 / 17",
+    "independentIslamicNational": "الأدب ({{lit}}) * 4 + التفسير و الحديث ({{interp}}) * 5 + الفقه و الأصول ({{fiqh}}) * 5 + الإنجليزية ({{en}}) * 2 + الفلسفة ({{philo}}) * 2 / 18",
+    "independentAppliedArtsNational": "فن تصميم المنتوج ({{product}}) * 5 + تصميم الوسائط ({{multimedia}}) * 8 + فن تصميم المحيط ({{env}}) * 5 + الإنجليزية ({{en}}) * 2 + الفلسفة ({{philo}}) * 2 / 22",
     "independentSVTNational": "الرياضيات ({{math}}) * 7 + علوم الحياة والأرض ({{svt}}) * 7 + الفيزياء-الكيمياء ({{pc}}) * 5 + الفلسفة ({{philo}}) * 2 + الإنجليزية ({{en}}) * 2 / 23",
     "independentPCNational": "الرياضيات ({{math}}) * 7 + علوم الحياة والأرض ({{svt}}) * 5 + الفيزياء-الكيمياء ({{pc}}) * 7 + الفلسفة ({{philo}}) * 2 + الإنجليزية ({{en}}) * 2 / 23",
     "independentAgriculturalNational": "الرياضيات ({{math}}) * 7 + الفيزياء-الكيمياء ({{pc}}) * 5 + علوم الحياة والأرض ({{svt}}) * 5 + الإنتاج النباتي/الحيواني ({{plantAnimal}}) * 5 + الفلسفة ({{philo}}) * 2 + الإنجليزية ({{en}}) * 2 / 26",
     "independentAdabNational": "العربية ({{ar}}) * {{arCoef}} + الإنجليزية ({{en}}) * {{enCoef}} + التاريخ-الجغرافيا ({{hg}}) * {{hgCoef}} + الفلسفة ({{philo}}) * {{philoCoef}} / {{coefSum}}",
-    "independentEconomicsNational": "الرياضيات ({{math}}) * 4 + المحاسبة ({{account}}) * {{accountCoef}} + الاقتصاد العام ({{genEcon}}) * {{genEconCoef}} + الاقتصاد ({{econ}}) * {{econCoef}} + الفلسفة ({{philo}}) * 2 + الإنجليزية ({{en}}) * 2 / {{coefSum}}",
-    "independentMathNational": "الرياضيات ({{math}}) * 9 + الفيزياء-الكيمياء ({{pc}}) * 7 {{#svt}}+ علوم الحياة والأرض ({{svt}}) * 3{{/svt}} {{#eng}}+ علوم الهندسة ({{eng}}) * 3{{/eng}} + الفلسفة ({{philo}}) * 2 + الإنجليزية ({{en}}) * 2 / {{coefSum}}",
-    "independentScienceTechNational": "الرياضيات ({{math}}) * 7 + الفيزياء-الكيمياء ({{pc}}) * 5 + علوم الهندسة ({{eng}}) * 8 + الفلسفة ({{philo}}) * 2 + الإنجليزية ({{en}}) * 2 / {{coefSum}}",
+    "independentEconomicsNational": "الرياضيات ({{math}}) * 4 + المحاسبة و الرياضيات المالية ({{account}}) * {{accountCoef}} + الاقتصاد العام و الإحصاء ({{genEcon}}) * {{genEconCoef}} +  الاقتصاد والتنظيم الإداري للمقاولات ({{econ}}) * {{econCoef}} + الفلسفة ({{philo}}) * 2 + الإنجليزية ({{en}}) * 2 / {{coefSum}}",
+    "independentMathNational": "الرياضيات ({{math}}) * 9 + الفيزياء-الكيمياء ({{pc}}) * 7 {{#svt}}+ علوم الحياة والأرض ({{svt}}) * 3{{/svt}} {{#eng}}+ علوم المهندس ({{eng}}) * 3{{/eng}} + الفلسفة ({{philo}}) * 2 + الإنجليزية ({{en}}) * 2 / {{coefSum}}",
+    "independentScienceTechNational": "الرياضيات ({{math}}) * 7 + الفيزياء-الكيمياء ({{pc}}) * 5 + علوم المهندس ({{eng}}) * 8 + الفلسفة ({{philo}}) * 2 + الإنجليزية ({{en}}) * 2 / {{coefSum}}",
     "independentFinal": "(الجهوي {{regional}} * 8 + الوطني {{national}} * 14) / 22 = {{value}}"
   },
   "breakdown": {
