--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -252,5 +252,18 @@
   "regionalExam": "الامتحان الجهوي",
   "nationalExam": "الامتحان الوطني",
   "title": "حساب معدل البكالوريا حسب الشعب",
-  "continuousControls": "المراقبة المستمرة"
+  "continuousControls": "المراقبة المستمرة",
+
+ "donate": "تبرع",
+  "support": {
+    "title": "ادعم المشروع",
+    "description": "إذا وجدت هذا التطبيق مفيدًا، يُرجى النظر في دعم تطويره من خلال التبرع.",
+    "donateNow": "تبرع الآن",
+    "thankYou": " شكرًا لدعمك! ❤",
+    "methods": {
+      "paypal": "باي بال",
+      "binance": "بينانس",
+      "cih": "البنك التجاري والصناعي"
+    }
+  }
 }
